@@ -1,3 +1,9 @@
+2006-03-06  Ross Burton  <ross@burtonini.com>
+
+	* src/e-sexp.h:
+	* src/e-sexp.c:
+	Port to use GSlice rather than GMemChunk.
+
 2005-11-02  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
